Fixed section V heading

--- a/cs180/proj1/index.html
+++ b/cs180/proj1/index.html
@@ -336,7 +336,7 @@
   <br>
   <br>
 
-  <h2 align="middle">Section V: Prokudin-Gorskii Collection TIF Results</h2>
+  <h2 align="middle">Section V: Prokudin-Gorskii Collection TIF/JPG Results</h2>
   <div class="bounding-box">
     <h3 align="middle">
       Prokudin-Gorskii Collection TIF Results
