--- a/cs180/proj1/index.html
+++ b/cs180/proj1/index.html
@@ -339,7 +339,7 @@
   <h2 align="middle">Section V: Prokudin-Gorskii Collection TIF/JPG Results</h2>
   <div class="bounding-box">
     <h3 align="middle">
-      Prokudin-Gorskii Collection TIF Results
+      Prokudin-Gorskii Collection TIF/JPG Results
     </h3>
     <!-- Example of including multiple figures -->
     Here are the results after applying the image pyramid approach to the high resolution Prokudin-Gorskii collection
