Fixed image location

--- a/cs180/proj1/index.html
+++ b/cs180/proj1/index.html
@@ -399,7 +399,7 @@
       <table>
         <tr align="center">
           <td>
-            <img src="./Images/ProkudinGorskii Images/emir_with_ncc.jpg" align="middle" width="400px" />
+            <img src="./Images/TIF Images/emir_with_ncc.jpg" align="middle" width="400px" />
             <figcaption><code class="highlighter-rouge">emir_with_ncc.jpg</code>
             </figcaption>
             Green Shift: (31, 30)
