Added CS 180 to main website

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <h2>Resume</h2>
           <div class="center">
             <div class="pdf">
-              <a href="https://ianhdong.github.io/assets/pdf/IanDongResume.pdf" target="_blank">
+              <a href="./assets/pdf/IanDongResume.pdf" target="_blank">
                 <i class='bx bxs-file-pdf'>
 
                 </i>
@@ -377,6 +377,22 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/cv.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>CS 180 Projects</h4>
+                <p>School Project</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/cv.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Blythe Mental Health Hub"><i class="bx bx-plus"></i></a>
+                  <a href="./cs180/index.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/blythe.png" class="img-fluid" alt="">
@@ -386,7 +402,7 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/blythe.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Blythe Mental Health Hub"><i class="bx bx-plus"></i></a>
-                  <a href="blythe.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="./projects/blythe.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -434,7 +450,7 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/ants.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Ants vs SomeBees"><i class="bx bx-plus"></i></a>
-                  <a href="ants.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="./projects/ants.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -482,7 +498,7 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/scheme.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Scheme Interpreter"><i class="bx bx-plus"></i></a>
-                  <a href="scheme.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="./projects/scheme.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
