--- a/cs180/index.html
+++ b/cs180/index.html
@@ -13,7 +13,7 @@
 		background-color: #f6ead7;
 	}
 </style>
-<title>CS 180 Project Webpages/title>
+<title>CS 180 Project Webpages</title>
 <body>
 	<h3>Welcome to my CS180 Project Webpages</h3>
 	<br><br>
