--- a/index.html
+++ b/index.html
@@ -381,11 +381,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/cv.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>CS 180 Projects</h4>
+                <h4>Computer Vision Projects</h4>
                 <p>School Project</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/cv.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Blythe Mental Health Hub"><i class="bx bx-plus"></i></a>
+                    title="Computer Vision Projects"><i class="bx bx-plus"></i></a>
                   <a href="./cs180/index.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
