--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-5 col-md-5 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/cv.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -386,7 +386,7 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/cv.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Computer Vision Projects"><i class="bx bx-plus"></i></a>
-                  <a href="./cs180/index.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="./cs180/" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
