Updated course projects

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/ants.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Ants vs SomeBees"><i class="bx bx-plus"></i></a>
-                  <a href="./projects/ants.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="/projects/ants.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
