Fixing up personal website and did not update any other projects

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 
   <!-- ======= Mobile nav toggle button ======= -->
-  <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
+  <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button>
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex flex-column justify-content-center">
@@ -67,7 +67,7 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Ian Dong</h1>
       <p>I'm a <span class="typed"
-          data-typed-items="Software Engineer., Web Developer., Consultant., Sports Enthusiast."></span></p>
+          data-typed-items="Software Engineer., Machine Learning Engineer, Web Developer., Consultant., Sports Enthusiast."></span></p>
       <div class="social-links">
         <a href="https://linkedin.com/in/ianhdong" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/ianhdong" class="github"><i class='bx bxl-github'></i></a>
