--- a/cs180/index.html
+++ b/cs180/index.html
@@ -1,67 +1,24 @@
-<!-- <html>
-
-<head>
-</head>
-<style>
-	body {
-		padding: 100px;
-		width: 1000px;
-		margin: auto;
-		text-align: left;
-		font-weight: 300;
-		color: #121212;
-		background-color: #f6ead7;
-	}
-</style>
-<title>CS 180 Project Webpages</title>
-<body>
-	<h3>Welcome to my CS180 Project Webpages</h3>
-	<br><br>
-	<a href="/proj1/">Project 1</a>
-	<br><br>
-	<a href="/proj2/">Project 2</a>
-	<br><br>
-	<a href="/proj3/">Project 3</a>
-	<br><br>
-	<a href="/proj4/">Project 4</a>
-</body>
-<script>
-	var links = document.body.getElementsByTagName("a")
-	var a = window.location.href.indexOf(".io")
-	var repo_name = window.location.href.substring(a + 3)
-	for (var i = 0; i < links.length; i++) {
-		var link = links[i]
-		var actual_name = link.href.substring(link.href.indexOf(".io") + 4)
-		link.href = repo_name + actual_name
-	}
-</script>
-
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course Projects</title>
-    <link rel="stylesheet" href="./css/styles.css">
-	<script>
-        document.addEventListener("DOMContentLoaded", function() {
-            fetch('navbar.html')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('navbar').innerHTML = data;
-                });
-        });
-    </script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Course Projects</title>
+	<link rel="stylesheet" href="/cs180/css/styles.css">
+	<script src="/cs180/js/hamburger.js" defer></script>
+
 </head>
+
 <body>
-	<div id="navbar"></div>
 
-    <div class="content">
-        <h1>Welcome to the Course Projects</h1>
-        <p>Select a project from the dropdown menu to explore each project.</p>
-    </div>
 
+	<div class="content">
+		<div class="bounding-box">
+			<h1 align="middle">Welcome to Ian's CS 180 Course Projects</h1>
+			<p class="centered-paragraph">Select a project from the dropdown menu to explore each one more.</p>
+		</div>
+	</div>
 </body>
+
 </html>
