Done with Task 2.1

--- a/cs180/proj2/index.html
+++ b/cs180/proj2/index.html
@@ -176,48 +176,76 @@
       <table>
         <tr align="center">
           <td>
-            <img src="./Images/taj-0.png" align="middle" width="300px" />
+            <img src="./Images/Taj/taj-0.png" align="middle" width="300px" />
           </td>
           <td>
-            <img src="./Images/taj-1.png" align="middle" width="300px" />
+            <img src="./Images/Taj/taj-1.png" align="middle" width="300px" />
           </td>
           <td>
-            <img src="./Images/taj-2.png" align="middle" width="300px" />
+            <img src="./Images/Taj/taj-2.png" align="middle" width="300px" />
           </td>
         </tr>
         <tr align="center">
           <td>
-            <img src="./Images/taj-4.png" align="middle" width="300px" />
+            <img src="./Images/Taj/taj-4.png" align="middle" width="300px" />
           </td>
           <td>
-            <img src="./Images/taj-8.png" align="middle" width="300px" />
+            <img src="./Images/Taj/taj-8.png" align="middle" width="300px" />
           </td>
           <td>
-            <img src="./Images/taj-16.png" align="middle" width="300px" />
+            <img src="./Images/Taj/taj-16.png" align="middle" width="300px" />
           </td>
         </tr>
       </table>
+      <br>
+      In the images below, we can see that as alpha increases the sunset and surrounding areas became much more defined and saturated.
       <table>
         <tr align="center">
           <td>
-            <img src="./Images/campanile-0.png" align="middle" width="300px" />
+            <img src="./Images/Campanile/campanile-0.png" align="middle" width="300px" />
           </td>
           <td>
-            <img src="./Images/campanile-1.png" align="middle" width="300px" />
+            <img src="./Images/Campanile/campanile-1.png" align="middle" width="300px" />
           </td>
           <td>
-            <img src="./Images/campanile-2.png" align="middle" width="300px" />
+            <img src="./Images/Campanile/campanile-2.png" align="middle" width="300px" />
           </td>
         </tr>
         <tr align="center">
           <td>
-            <img src="./Images/campanile-4.png" align="middle" width="300px" />
+            <img src="./Images/Campanile/campanile-4.png" align="middle" width="300px" />
           </td>
           <td>
-            <img src="./Images/campanile-8.png" align="middle" width="300px" />
+            <img src="./Images/Campanile/campanile-8.png" align="middle" width="300px" />
           </td>
           <td>
-            <img src="./Images/campanile-16.png" align="middle" width="300px" />
+            <img src="./Images/Campanile/campanile-16.png" align="middle" width="300px" />
+          </td>
+        </tr>
+      </table>
+      <br>
+      This sharpening algorithm can also help resharpen an image that was blurred by a Gaussian filter. It looks like when alpha = 4 is when the blurred image starts to look more like the original. Increasing alpha past it makes the image look more saturated.
+      <table>
+        <tr align="center">
+          <td>
+            <img src="./Images/Doe/doe-0.png" align="middle" width="300px" />
+          </td>
+          <td>
+            <img src="./Images/Doe/doe-1.png" align="middle" width="300px" />
+          </td>
+          <td>
+            <img src="./Images/Doe/doe-2.png" align="middle" width="300px" />
+          </td>
+        </tr>
+        <tr align="center">
+          <td>
+            <img src="./Images/Doe/doe-4.png" align="middle" width="300px" />
+          </td>
+          <td>
+            <img src="./Images/Doe/doe-8.png" align="middle" width="300px" />
+          </td>
+          <td>
+            <img src="./Images/Doe/doe-16.png" align="middle" width="300px" />
           </td>
         </tr>
       </table>
